--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-I haven't tested this with my CG-50 (384x216?) or FX-9750GIII (128x64?) yet, although I'll upload the image as soon as I find the darn cable
+Tested on my FX-9750GIII and CG-50
+I kept having memory issues on the FX-9750GIII, make sure to keep code.py under 16kb. The CG-50 handled my 132kb code.py file well, I didn't try above that.
 Image from Tonari no Seki-kun
 It'll get converted to black and white, but you need to resize it yourself to the correct dimensions.
 The black and white threshold is 127, and it should be adjusted to have the best contrast as possible (it's pretty good at this setting though, at least with Yokoi here)
